# ultrasound-processing

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml
artifacts/: README.md
configs/: default.yaml
configs/experiments/: attention_unet_fm_baq.yaml  efficientnet_finetune_fm.yaml  multi_unet_ensemble_fm.yaml  resnet18_linear_probe_fm.yaml  unet_ffm_abdomen.yaml  unet_fm_baq.yaml
configs/experiments/umb_region_grid/: unet_ffm_aq.yaml  unet_ffm_b.yaml  unet_ffm_ba.yaml  unet_ffm_baq.yaml  unet_ffm_bq.yaml  unet_ffm_q.yaml  unet_fm_a.yaml  unet_fm_aq.yaml  unet_fm_b.yaml  unet_fm_ba.yaml  unet_fm_bq.yaml  unet_fm_q.yaml
data/: README.md
docs/: gradcam_image_list_example.csv  reproducibility.md  research_context.md
notebooks/archive/: Copy_of_Human_Body_Composition_FM_FFM.ipynb
notebooks/exploratory/: README.md
scripts/: evaluate.py  export_region_grid_results.py  gradcam.py  gradcam_report.py  predict.py  run_region_grid.py  run_stats.py  train.py
src/ultrasound_processing/: __init__.py  config.py  pipeline.py  tracking.py
src/ultrasound_processing/data/: __init__.py  datasets.py  labels.py  splits.py  transforms.py
src/ultrasound_processing/evaluation/: __init__.py  metrics.py  predict.py  region_grid.py  statistics.py
src/ultrasound_processing/models/: __init__.py  attention_unet.py  common.py  efficientnet.py  ensemble.py  factory.py  (+5 more)
tests/: test_checkpoints.py  test_config.py  test_datasets.py  test_gradcam_report.py  test_labels.py  test_metrics.py  test_models_forward.py  test_region_grid.py  test_tracking.py
(+8 files in other folders)
