[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ultrasound-processing"
version = "0.1.0"
description = "PyTorch ultrasound body composition research pipeline"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "matplotlib>=3.8",
  "numpy>=1.26",
  "opencv-python>=4.8",
  "pandas>=2.1",
  "pillow>=10",
  "pyyaml>=6.0",
  "scipy>=1.11",
  "torch>=2.1",
  "torchvision>=0.16",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
